# test-project-apr

./: CMakeLists.txt  README.md  data.json  get_coverage.sh
include/: calculator.h
src/: calculator.cpp
tests/: CMakeLists.txt  test_calculator.cpp
